parslers-benchmark/src/tests/invalid/semanticErr/expressions/lessPairExpr.wacc
# evaluating less-than on references

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int,int) x = newpair(1,2) ;
  println x;
  pair(int,int) y = newpair(2,3) ;
  println y;
  println x < y
end
